# plaid-openapi

./: .gitignore  pyproject.toml  readme.md
generator/: 2020-09-14-processed.yml  compare.py  config.yaml  fix_enums.py  model.mustache  preprocess.py  regen.sh
generator/customized_template/: model.mustache
skeleton/src/plaid_skel/models/: aamva_analysis.py  aamva_detailed_match_result.py  aamva_match_result.py  account_access.py  account_assets.py  account_assets_all_of.py  account_balance.py  account_base.py  account_base_nullable.py  account_filter.py  account_filters_response.py  account_holder_category.py  account_identity.py  account_identity_all_of.py  account_identity_document_upload.py  account_identity_document_upload_all_of.py  account_identity_match_score.py  account_identity_match_score_all_of.py  account_insights.py  account_product_access.py  account_product_access_nullable.py  account_selection_cardinality.py  account_subtype.py  account_type.py  account_verification_insights.py  account_verification_insights_account_number_format.py  account_verification_insights_network_status.py  account_verification_insights_previous_returns.py  accounts_balance_get_request.py  accounts_balance_get_request_options.py  accounts_get_request.py  accounts_get_request_options.py  accounts_get_response.py  ach_class.py  action_state.py  activity.py  activity_type.py  address.py  address_data.py  address_data_not_required.py  (+1981 more)
