[tool.poetry]
name = "plaid-openapi"
version = "0.1.0"
description = ""
license = "Proprietary"
authors = ["mgdelmonte <mgdelmonte@gmail.com>"]
readme = "usage.md"
packages = [{include = "plaid_skel", from = "skeleton/src"}]

[tool.poetry.dependencies]
python = "^3.10"
dpath = "^2.1.5"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
